tests/snapshots/snapshots__budget_cmdk_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4007 tokens)

ARCHITECTURE.md
     1→# Architecture
     3→> Document is a work in progress!
     4→
     5→⌘K is born from a simple constraint: can you write a combobox with filtering and sorting using the [compound component](https://kentcdodds.com/blog/compound-components-with-react-hooks) approach? We didn't want to render items manually from an array:
     6→
     7→```tsx
     8→// No
     9→<>
    10→  {items.map((item) => {
    11→    return <div>{item}</div>
    12→  })}
    13→</>
    14→```
    15→
      →…
    46→## Approach
    50→### Discarded approach
    52→We did not use `React.Children` iteration because it will not support component composition. There is no way to "peek inside" the items contained within `<BlogItems />`, so those items cannot be filtered.
    53→
      →…
    60→## Example
    92→## Performance
    96→## Groups

README.md
     5→# ⌘K
     7→⌘K is a command menu React component that can also be used as an accessible combobox. You render items, it filters and sorts them automatically. ⌘K supports a fully composable API <sup><sup>[How?](/ARCHITECTURE.md)</sup></sup>, so you can wrap items in other components or even as static JSX.
     8→
     9→## Install
    15→## Use
    82→## Parts and styling
    86→### Command `[cmdk-root]`
   153→### Dialog `[cmdk-dialog]` `[cmdk-overlay]`
   180→### Input `[cmdk-input]`
   190→### List `[cmdk-list]`
   212→### Item `[cmdk-item]` `[data-disabled?]` `[data-selected?]`
   242→### Group `[cmdk-group]` `[hidden?]`
   256→### Separator `[cmdk-separator]`
   260→### Empty `[cmdk-empty]`
   264→### Loading `[cmdk-loading]`
   274→### `useCommandState(state => state.selectedField)`
   285→## Examples
   289→### Nested items
   338→### Show sub-items when searching
   361→### Asynchronous results
   397→### Use inside Popover
   426→### Drop in stylesheets
   430→## FAQ
   456→## History
   462→## Testing

cmdk/package.json
     2→  "name": "cmdk",
     3→  "version": "1.1.1",
     4→  "license": "MIT",
     5→  "main": "./dist/index.js",
     6→  "module": "./dist/index.mjs",
     7→  "types": "./dist/index.d.ts",
     8→  "files": [
    10→  ],
    11→  "exports": {
    17→  },
    18→  "scripts": {
    23→  },
    24→  "peerDependencies": {
    27→  },
    28→  "dependencies": {
    33→  },
    34→  "devDependencies": {
    36→  },
    37→  "sideEffects": false,
    38→  "repository": {
    42→  },
    43→  "bugs": {
    45→  },
    46→  "homepage": "https://github.com/pacocoursey/cmdk#readme",
    47→  "author": {
    50→  }
    51→}

cmdk/src/command-score.ts
    54→function commandScoreInner(
    55→  string,
    56→  abbreviation,
    57→  lowerString,
    58→  lowerAbbreviation,
    59→  stringIndex,
    60→  abbreviationIndex,
    61→  memoizedResults,
    62→) {
   150→function formatInput(string) {
   155→export function commandScore(string: string, abbreviation: string, aliases: string[]): number {
   156→  /* NOTE:
      →  …

cmdk/src/index.tsx
     3→import * as RadixDialog from '@radix-ui/react-dialog'
     4→import * as React from 'react'
     5→import { commandScore } from './command-score'
     6→import { Primitive } from '@radix-ui/react-primitive'
     7→import { useId } from '@radix-ui/react-id'
     8→import { composeRefs } from '@radix-ui/react-compose-refs'
    10→type Children = { children?: React.ReactNode }
    11→type DivProps = React.ComponentPropsWithoutRef<typeof Primitive.div>
    13→type LoadingProps = Children &
    14→  DivProps & {
    23→type EmptyProps = Children & DivProps & {}
    24→type SeparatorProps = DivProps & {
    28→type DialogProps = RadixDialog.DialogProps &
    29→  CommandProps & {
    37→type ListProps = Children &
    38→  DivProps & {
    44→type ItemProps = Children &
    45→  Omit<DivProps, 'disabled' | 'onSelect' | 'value'> & {
    60→type GroupProps = Children &
    61→  Omit<DivProps, 'heading' | 'value'> & {
    69→type InputProps = Omit<React.ComponentPropsWithoutRef<typeof Primitive.input>, 'value' | 'onChange' | 'type'> & {
    79→type CommandFilter = (value: string, search: string, keywords?: string[]) => number
    80→type CommandProps = Children &
    81→  DivProps & {
   123→type Context = {
   137→type State = {
   143→type Store = {
   149→type Group = {
   154→const GROUP_SELECTOR = `[cmdk-group=""]`
   155→const GROUP_ITEMS_SELECTOR = `[cmdk-group-items=""]`
   156→const GROUP_HEADING_SELECTOR = `[cmdk-group-heading=""]`
   157→const ITEM_SELECTOR = `[cmdk-item=""]`
   158→const VALID_ITEM_SELECTOR = `${ITEM_SELECTOR}:not([aria-disabled="true"])`
   159→const SELECT_EVENT = `cmdk-item-select`
   160→const VALUE_ATTR = `data-value`
   161→const defaultFilter: CommandFilter = (value, search, keywords) => commandScore(value, search, keywords)
   163→const CommandContext = React.createContext<Context>(undefined)
   164→const useCommand = () => React.useContext(CommandContext)
   165→const StoreContext = React.createContext<Store>(undefined)
   166→const useStore = () => React.useContext(StoreContext)
   167→const GroupContext = React.createContext<Group>(undefined)
   169→const Command = React.forwardRef<HTMLDivElement, CommandProps>((props, forwardedRef) => {
   664→const Item = React.forwardRef<HTMLDivElement, ItemProps>((props, forwardedRef) => {
   729→const Group = React.forwardRef<HTMLDivElement, GroupProps>((props, forwardedRef) => {
   774→const Separator = React.forwardRef<HTMLDivElement, SeparatorProps>((props, forwardedRef) => {
   787→const Input = React.forwardRef<HTMLInputElement, InputProps>((props, forwardedRef) => {
   833→const List = React.forwardRef<HTMLDivElement, ListProps>((props, forwardedRef) => {
   882→const Dialog = React.forwardRef<HTMLDivElement, DialogProps>((props, forwardedRef) => {
   899→const Empty = React.forwardRef<HTMLDivElement, EmptyProps>((props, forwardedRef) => {
   909→const Loading = React.forwardRef<HTMLDivElement, LoadingProps>((props, forwardedRef) => {
   930→const pkg = Object.assign(Command, {
   963→function findNextSibling(el: Element, selector: string) {
   972→function findPreviousSibling(el: Element, selector: string) {
   981→function useAsRef<T>(data: T) {
   991→const useLayoutEffect = typeof window === 'undefined' ? React.useEffect : React.useLayoutEffect
   993→function useLazyRef<T>(fn: () => T) {
  1004→function useCmdk<T = any>(selector: (state: State) => T): T {
  1010→function useValue(
  1011→  id: string,
  1012→  ref: React.RefObject<HTMLElement>,
  1013→  deps: (string | React.ReactNode | React.RefObject<HTMLElement>)[],
  1014→  aliases: string[] = [],
  1015→) {
  1046→const useScheduleLayoutEffect = () => {
  1061→function renderChildren(children: React.ReactElement) {
  1071→function SlottableWithNestedChildren(
  1072→  { asChild, children }: { asChild?: boolean; children?: React.ReactNode },
  1073→  render: (child: React.ReactNode) => JSX.Element,
  1074→) {
  1081→const srOnlyStyles = {

cmdk/tsup.config.ts
     1→import { defineConfig } from 'tsup'

package.json
     2→  "name": "cmdk-root",
     3→  "private": true,
     4→  "scripts": {
    13→  },
    14→  "devDependencies": {
    21→  },
    22→  "packageManager": "pnpm@8.8.0",
    23→  "lint-staged": {
    27→  }
    28→}

playwright.config.ts
     1→import { PlaywrightTestConfig, devices } from '@playwright/test'
     3→const config: PlaywrightTestConfig = {

pnpm-workspace.yaml
     1→packages:

test/basic.test.ts
     1→import { expect, test } from '@playwright/test'

test/dialog.test.ts
     1→import { expect, test } from '@playwright/test'

test/group.test.ts
     1→import { expect, test } from '@playwright/test'

test/item.test.ts
     1→import { expect, test } from '@playwright/test'

test/keybind.test.ts
     1→import { expect, test } from '@playwright/test'

test/numeric.test.ts
     1→import { expect, test } from '@playwright/test'

test/package.json
     2→  "name": "cmdk-tests",
     3→  "version": "0.0.0",
     4→  "scripts": {
     6→  },
     7→  "dependencies": {
    17→  }
      →  …

test/pages/_app.tsx
     1→import '../style.css'
     3→export default function App({ Component, pageProps }) {

test/pages/dialog.tsx
     1→import { Command } from 'cmdk'
     2→import * as React from 'react'
     4→const Page = () => {

test/pages/group.tsx
     1→import { Command } from 'cmdk'
     2→import * as React from 'react'
     4→const Page = () => {

test/pages/huge.tsx
     1→import { Command } from 'cmdk'
     2→import * as React from 'react'
     4→const items …
     6→const Page = () => {
    28→const Item = () => {

test/pages/index.tsx
     1→import { Command } from 'cmdk'
     3→const Page = () => {

test/pages/item-advanced.tsx
     4→const Page = () => {

test/pages/item.tsx
     1→import { Command } from 'cmdk'
     2→import * as React from 'react'
     4→const Page = () => {

test/pages/numeric.tsx
     1→import { Command } from 'cmdk'
     3→const Page = () => {

test/pages/portal.tsx
     5→const Page = () => {

test/pages/props.tsx
     5→const Page = () => {

test/props.test.ts
     1→import { expect, test } from '@playwright/test'

test/tsconfig.json
     2→  "compilerOptions": {
    17→  },
    18→  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "../dialog.test.ts"],
    19→  "exclude": ["node_modules"]
    20→}

tsconfig.json
     2→  "compilerOptions": {
    16→  },
    17→  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
    18→  "exclude": ["node_modules", "build", "dist", ".next"]
    19→}

website/README.md
     3→## Getting Started
    19→## Learn More
    28→## Deploy on Vercel

website/components/cmdk/framer.tsx
     1→import { Command } from 'cmdk'
     2→import React from 'react'
     4→export function FramerCMDK() {
    57→function Button() {
    61→function Input() {
    65→function Badge() {
    69→function Radio() {
    78→function Slider() {
    86→function Avatar() {
    90→function Container() {
    94→function Item({ children, value, subtitle }: { children: React.ReactNode; value: string; subtitle: string }) {
   106→function ButtonIcon() {
   119→function InputIcon() {
   132→function RadioIcon() {
   145→function BadgeIcon() {
   158→function ToggleIcon() {
   171→function AvatarIcon() {
   184→function ContainerIcon() {
   197→function SearchIcon() {
   212→function SliderIcon() {

website/components/cmdk/linear.tsx
     1→import { Command } from 'cmdk'
     3→export function LinearCMDK() {
    30→const items = [
    68→function AssignToIcon() {
    76→function AssignToMeIcon() {
    90→function ChangeStatusIcon() {
   103→function ChangePriorityIcon() {
   113→function ChangeLabelsIcon() {
   125→function RemoveLabelIcon() {
   137→function SetDueDateIcon() {

website/components/cmdk/raycast.tsx
     7→export function RaycastCMDK() {

website/components/cmdk/vercel.tsx
     1→import React from 'react'
     2→import { Command } from 'cmdk'
     4→export function VercelCMDK() {

website/components/code/index.tsx
     4→import styles from './code.module.scss'
     7→const theme = {
    41→export function Code({ children }: { children: string }) {

website/components/icons/index.tsx
     1→import styles from './icons.module.scss'
     3→export function FigmaIcon() {
    15→export function RaycastIcon() {
    28→export function YouTubeIcon() {
    40→export function SlackIcon() {
    79→export function VercelIcon() {
    87→export function LinearIcon({ style }: { style?: Object }) {
   110→export function Logo({ children, size = '20px' }: { children: React.ReactNode; size?: string }) {
   127→export function CopyIcon() {
   146→export function CopiedIcon() {
   154→export function GitHubIcon() {
   165→export function FramerIcon() {

website/package.json
     2→  "name": "cmdk-website",
     3→  "version": "0.1.0",
     4→  "private": true,
     5→  "scripts": {
    11→  "dependencies": {
    24→  "devDependencies": {
    38→  "lint-staged": {
    43→  "husky": {

website/pages/_app.tsx
    13→const title …
    14→const description …
    15→const siteUrl …
    17→export default function App({ Component, pageProps }: AppProps) {

website/pages/_document.tsx
     5→export default class Document extends NextDocument {
     6→  render() {

website/pages/index.tsx
    18→import packageJSON from '../../cmdk/package.json'
    20→type TTheme …
    25→type Themes …
    27→const ThemeContext …
    29→export default function Index() {
    84→function CMDKWrapper(props: MotionProps & { children: React.ReactNode }) {
   101→function InstallButton() {
   123→function GitHubButton() {
   139→const themes = [
   158→function ThemeSwitcher() {
   262→function Codeblock() {
   296→function VersionBadge() {
   300→function Footer() {
   326→function RaunoSignature() {
   350→function PacoSignature() {

website/tsconfig.json
     2→  "compilerOptions": {
    18→  },
    19→  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
    20→  "exclude": ["node_modules"]
    21→}

website/vercel.json
     2→  "headers": [
    12→  ]
    13→}
