tests/snapshots/snapshots__budget_cmdk_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (488 words)

ARCHITECTURE.md
     1→# Architecture
     3→> Document is a work in progress!
     4→
     5→⌘K is born from a simple constraint: can you write a combobox with filtering and sorting using the [compound component](https://kentcdodds.com/blog/compound-components-with-react-hooks) approach? We didn't want to render items manually from an array:
     6→
     7→```tsx
     8→// No
     9→<>
    10→  {items.map((item) => {
    11→    return <div>{item}</div>
    12→  })}
    13→</>
    14→```
    15→
      →…
    46→## Approach …
    50→### Discarded approach …
    60→## Example …
    92→## Performance …
    96→## Groups …
README.md
     5→# ⌘K
     7→⌘K is a command menu React component that can also be used as an accessible combobox. You render items, it filters and sorts them automatically. ⌘K supports a fully composable API <sup><sup>[How?](/ARCHITECTURE.md)</sup></sup>, so you can wrap items in other components or even as static JSX.
     8→
     9→## Install …
    15→## Use …
    82→## Parts and styling …
   285→## Examples …
   430→## FAQ …
   456→## History …
   462→## Testing …
cmdk/src/command-score.ts
    54→function commandScoreInner …
   150→function formatInput …
   155→export function commandScore(string: string, abbreviation: string, aliases: string[]): number {
   156→  /* NOTE:
      →…
cmdk/src/index.tsx
     5→import { commandScore } from './command-score'
   664→const Item …
   729→const Group …
   774→const Separator …
   787→const Input …
   833→const List …
   882→const Dialog …
   899→const Empty …
   909→const Loading …
   963→function findNextSibling(el: Element, selector: string) {
  1004→function useCmdk<T = any>(selector: (state: State) => T): T {
  1046→const useScheduleLayoutEffect = () => {
cmdk/tsup.config.ts
     1→import { defineConfig } from 'tsup'
playwright.config.ts
     3→const config: PlaywrightTestConfig = {
test/pages/_app.tsx
     1→import '../style.css'
     3→export default function App({ Component, pageProps }) {
test/pages/huge.tsx
     4→const items = new Array(1000).fill(0)
website/README.md
     3→## Getting Started
     5→First, run the development server:
     6→
      →…
    19→## Learn More
    21→To learn more about Next.js, take a look at the following resources:
    22→
      →…
    28→## Deploy on Vercel
    30→The easiest way to deploy your Next.js app is to use the [Vercel Platform](https://vercel.com/new?utm_medium=default-template&filter=next.js&utm_source=create-next-app&utm_campaign=create-next-app-readme) from the creators of Next.js.
    31→
      →…
website/components/cmdk/framer.tsx
     4→export function FramerCMDK() {
website/components/cmdk/linear.tsx
     3→export function LinearCMDK() {
    30→const items = [
website/components/cmdk/raycast.tsx
     7→export function RaycastCMDK() {
website/components/cmdk/vercel.tsx
     4→export function VercelCMDK() {
website/components/code/index.tsx
     4→import styles from './code.module.scss'
     7→const theme = {
    41→export function Code({ children }: { children: string }) {
    42→  return (
    43→    <Highlight {...defaultProps} theme={theme} code={children} language="jsx">
      →…
website/components/icons/index.tsx
     1→import styles from './icons.module.scss'
     3→export function FigmaIcon() {
    15→export function RaycastIcon() {
    28→export function YouTubeIcon() {
    40→export function SlackIcon() {
    79→export function VercelIcon() {
    87→export function LinearIcon({ style }: { style?: Object }) {
   110→export function Logo({ children, size = '20px' }: { children: React.ReactNode; size?: string }) {
   127→export function CopyIcon() {
   146→export function CopiedIcon() {
   154→export function GitHubIcon() {
   165→export function FramerIcon() {
website/next.config.js
     1→/** @type {import('next').NextConfig} */
     2→const nextConfig = {
website/pages/_app.tsx
    17→export default function App({ Component, pageProps }: AppProps) {
website/pages/_document.tsx
     5→export default class Document extends NextDocument {
     6→  render() {
website/pages/index.tsx
    18→import packageJSON from '../../cmdk/package.json'
    29→export default function Index() {
    99→//////////////////////////////////////////////////////////////////
   100→
   101→function InstallButton() {
   137→//////////////////////////////////////////////////////////////////
   138→
   139→const themes = [
   140→  {
      →…
   260→//////////////////////////////////////////////////////////////////
   261→
   262→function Codeblock() {
   294→//////////////////////////////////////////////////////////////////
   295→
   296→function VersionBadge() {
